# pump

./: .code-review-graphignore  .env.example  .gitattributes  .gitignore  .gitmodules  .npmrc  README.md  ecosystem.config.cjs  guncelleme.md  guncelleme2.md  guncelleme3.md  next.config.ts  package-lock.json  package.json  schema.sql
.cursor/: mcp.json  settings.json
.cursor/design-system/: MASTER.md  designs.md
.cursor/docs/: price-accuracy-contract.md  seamless-web3-ux-research-2026.md  self-hosted-bundler-2026.md  tier4-edge-ws-evaluation.md  tier4-local-first-zero-path.md  tier4-pg-trickle-evaluation.md  ultra-fast-strategy-2026.md
.cursor/rules/: code-review-graph.mdc  pump-ops-perf.mdc  pump-tma-skills.mdc
.github/workflows/: ci.yml  code-review-graph.yml  deploy-tma.yml  deploy.yml
admin-console/src/: MetaMaskGate.tsx
apps/admin/: README.md  package.json  vite.config.ts
apps/ch-flusher/: package.json
apps/indexer/: .env.example  package-lock.json  package.json
apps/indexer-sol/: .env.example  package.json  tsconfig.json
apps/indexer-sol-go/: .env.example  README.md  go.mod  go.sum
apps/settlement-worker/: package.json
apps/web/: next.config.ts  package.json  tailwind.config.ts
contracts/: foundry.toml
contracts/deployments/: base-sepolia-airdrop.json  base-sepolia-kol-escrow.json  base-sepolia-launchpad.json  bsc-testnet-pump.json  zugchain-launchpad.example.json
contracts/script/: DeployAirdropBaseSepolia.s.sol  DeployPumpBaseSepolia.s.sol  DeployPumpBsc.s.sol  SetFactoryVirtualEthReserve.s.sol  SetMemeFactoryCreateFee.s.sol
contracts/src/: BondingCurveManager.sol  KolMarketEscrow.sol  LaunchpadLens.sol  MemeFactory.sol
contracts/test/: LaunchpadUnit.t.sol
db/migrations/: 000_schema_migrations.sql  004_admin_link_tasks.sql  006_seed_system_missions.sql  011_token_board_stats.sql  (+37 more)
deploy/: BASE_SEPOLIA_DEPLOY.md  README-cicd.md  SOLANA_CUTOVER.md  SOLANA_MAINNET_CHECKLIST.md  admin-console-build.sh  copy-next-standalone-static.sh  nginx-drp-subdomain.example.conf  nginx-next-static.conf.snippet  nginx-pump-ssl.conf  nginx-pump.conf  nginx-scale-upstream.conf.snippet  pgbouncer.ini.snippet  pump-indexer-sol.service  pump.zugchain.org.example.conf  pump_db_grants.sql  solana-env-defaults.sh  tma-deploy.sh  ui-deploy.sh
docs/: chart-architecture.md  code-review-graph.md  fee-split-v2-spec.md  guncelleme-analiz-ve-plan.md  guncelleme-ilerleme.md  guncelleme-master-plan.md  ingest-cutover-runbook.md  kol-stats-roadmap.md  ops-perf-playbook.md  proje-mimari-2026.md  redis-key-catalog.md  repo-structure.md  solana-mode-switch-phases.md  solana-port.md  solana-pumpfun-parity.md  solana-stack-plan.md  ultra-fast-ui-phases.md
indexer/: .env.example
programs/: .gitignore  Anchor.toml  Cargo.toml  PUMP_FEEL.md  README.md  package-lock.json  package.json  tsconfig.json
programs/pump-curve/: Cargo.toml  Cargo.toml.bak031
programs/pump-curve/src/: factory.rs  lib.rs  math.rs  treasury.rs
programs/pump-factory/: Cargo.toml
programs/pump-factory/src/: lib.rs
programs/pump-launchpad/: Cargo.toml
programs/pump-launchpad/src/: events.rs  lib.rs  math.rs
programs/pump-pinocchio-spike/: Cargo.toml
programs/pump-pinocchio-spike/src/: lib.rs  math.rs
programs/pump-treasury/: Cargo.toml
programs/pump-treasury/src/: lib.rs
programs/scripts/: initialize-pinocchio.ts  initialize.ts
scripts/: arena-table-sim.mjs  migrate-font-sizes-to-cds.mjs  price-worker.ts  season-rename-cron.ts  setup-code-review-graph.ps1  snap-media-sizes-pass2.mjs  snap-media-sizes-pass3.mjs  snap-media-sizes.mjs
(+939 files in other folders)
