[workspace]
members = ["pump-curve"]
resolver = "2"

# Size-first release: mainnet rent ≈ 6960 lamports/byte of ProgramData.
# Prefer "s" over "z": "z" blew SBF 4KB stack frames in crypto deps during build.
# Sources: Solana Wiki performance, min-sized-rust, Anchor deploy-cost writeups.
# Further cut: single program (factory+curve+treasury) so Anchor runtime is paid once.
[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = "s"
strip = "symbols"

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
