[package]
name = "pump-factory"
version = "0.1.0"
description = "Pump meme factory (Solana) — SPL mint + curve registration"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pump_factory"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = ["no-log-ix-name", "no-idl"]
idl-build = ["anchor-lang/idl-build", "anchor-spl/idl-build"]

[dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
pump-curve = { path = "../pump-curve", features = ["cpi"] }
