[package]
name = "pump-pinocchio-spike"
version = "0.1.0"
description = "Size/rent spike: Pinocchio rewrite of pump launchpad core (measure vs Anchor)"
edition = "2021"

[workspace]

[lib]
crate-type = ["cdylib", "lib"]
name = "pump_pinocchio_spike"

[dependencies]
pinocchio = "0.8.4"
pinocchio-system = "0.2.3"
pinocchio-log = "0.3.0"
bytemuck = { version = "1.21", default-features = false, features = ["derive", "min_const_generics"] }

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
opt-level = "s"
strip = "symbols"

[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1
